# airflow-gcp

./: main.tf  provider.tf  variables.tf
airflow/: Chart.yaml  Dockerfile  pyproject.toml
infra/: main.tf
infra/modules/backend/vpc/: main.tf
infra/modules/gke/: main.tf  outputs.tf  variables.tf
infra/modules/helm/: main.tf  variables.tf
modules/cloudsql/: main.tf  variables.tf
