[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["yuri.olive <yuri.olive@stone.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
pyodbc = "^4.0"
simple-salesforce = "^0.74.3"
requests = "^2.22"
msrestazure = "^0.6.1"
oauth2client = "^4.1" # TODO Replace deprecated dependecy in favor of google-auth and oauthlib
google-api-python-client = "^1.7"
psycopg2-binary = "^2.8"
kubernetes = "^10.0"
apache-airflow = {extras = ["async", "crypto", "password", "postgres", "s3", "slack"],version = "==1.10.3"}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.0"

